--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "tachyons": "^4.12.0",
+    "homepage": "https://yaseenaiman.github.io/First_React_Project_RoboBuddies",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+     "predeploy": "npm run build",
+ "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
